just noting svg work

--- a/SVGpractice/basicshapes/nestedBasic2.html
+++ b/SVGpractice/basicshapes/nestedBasic2.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nested Basic 2</title>
   </head>
-
   <body>
-    <!--Begin using % instead of absolutes
-  <svg>
-    <rect width='500' height='250' fill='palegreen'/>
-    <circle cx='125' cy='50%' r='50' fill='skyblue' />
-    <!-- line needs beginning and ending x y points && stroke-width-->
-    <line x1='25' y1='100' x2='50' y2='120' stroke-width='1' stroke='balck' />
-    <line x1='50%' y1='50%' x2='100% y2=' 100' stroke-width='3' stroke='goldenrod' />
+    <svg>
+      <rect width="500" height="250" fill="palegreen" />
+      <circle cx="125" cy="50%" r="50" fill="skyblue" />
+      <line x1="25" y1="100" x2="50" y2="120" stroke-width="1" stroke="blue" />
+      <line
+        x1="50%"
+        y1="50%"
+        x2="100%"
+        y2="100%"
+        stroke-width="2"
+        stroke="goldenrod"
+      />
+    </svg>
+
+    <svg width="400" height="100">
+      <rect width="400" height="100" fill="burlywood" />
+      <circle cx="200" cy="50" r="75" fill="crimson" />
+      <rect width="100" height="50" x="150" y="25" fill="teal" />
     </svg>
   </body>
-
-  <body>
-    <h2 making obvious mistatekws </div>
-    </p>
-    <ul></li>
-
-  </body>
-
 </html>
