--- a/SVGpractice/styling/styles1.html
+++ b/SVGpractice/styling/styles1.html
@@ -18,11 +18,11 @@
         <a href="#contact">Contact</a>
       </nav>
      <div class="hero1">
-      <img src='../assets/img/AC190x400.svg'
+      <img src='../assets/img/ACHdr6x1.svg'
     </div
-    <!--
+
     <button id="hamburger" class="hamburger"></button>
-  
+     <!--
     <nav id="main__nav" class="main__nav">
         <a href="#">Home</a>
         <a href="#">About</a>
